# Operator-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  crdgen.sh  test-workloads.yaml
.cargo/: config.toml
src/: controller.rs  crdgen.rs  lib.rs  main.rs
yaml/: crd.yaml  operator.yaml
