[package]
name = "operator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
anyhow = { version= "1.0.70", features = ["default"] }
kube = { version = "0.82.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.21.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.18"
openssl = { version = "0.10.35", features = ["vendored"] }
schemars = { version = "0.8.12", features = ["chrono"] }
thiserror = "1.0.37"
futures = "0.3.25"